Changes for 1.3.1.0
* Added tool tips for units to battle calculator. (veqryn)

* Fixed null pointer caused by using .getOwner().getData()  and a word to anyone else who ever thinks about using this: don't, it causes null pointers if there are any neutrals, since neutral is a null player. (veqryn)

* Created new unit attachment, requiresUnits, which allows units to be placed only when certain units are in the territory. (veqryn)

* Changed it so that Territory production defaults to Zero instead of 2, and that unitProduction gets set to a territory's production, though you can still set unitProduction manually if you set it AFTER you set production. (veqryn)

* Created new unit attachment, consumesUnits, which allows units to be upgraded or placed on top of other units. (veqryn)

* Created new unit attachment, canOnlyBePlacedInTerritoryValuedAtX, which defaults to -1 meaning can be placed anywhere. (veqryn)

* Expanded 'disabled' logic to include airbases, repairsUnits, givesMovement, and combat units. Disabled units will not provide their abilities, like scrambling, movement, or repairing, to other units.  Disabled combat units will not participate in combat, and will be destroyed if captured. (veqryn)

* Created the placement logic for canProduceXUnits, which now works properly. (veqryn)

* Fixed display error where units with unit damage were not having their damage amount displayed. Still some bugs though for groups of units. (veqryn)

* Created new unit attachment, canDieFromReachingMaxDamage, which will cause a unit to die if they reach max damage through strat bombing or rockets. (veqryn)

* Fixed bug in triggers that caused unit production damage to be done to a territory if a factory was placed via triggers. (veqryn)

* Allowed rockets to also damage a unit, rather than a territory.  Further work on getting unit damage to work and display properly. (veqryn)

* Made disabled units actually work. (veqryn)
